--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,13 +119,14 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 # ! Add libraries here
 # )
 # add_dependencies(${PROJECT_NAME}
-include(cmake/create_documents.cmake)
 
 # ! Add dependencies here
 # )
 target_compile_options(${PROJECT_NAME} PRIVATE
   ${CPP_COMFILE_FLAGS}
 )
+add_subdirectory(${${PROJECT_NAME}_TEST_PATH})
+include(cmake/create_documents.cmake)
 message(STATUS)
 message(STATUS "Finished all process in ${PROJECT_NAME} CMakeLists.txt.")
 message(STATUS)
